[gd_scene load_steps=7 format=3 uid="uid://b6dqjw2q31trb"]

[ext_resource type="Script" path="res://stages/level2/speed/upgrade.gd" id="1_x5joc"]
[ext_resource type="Texture2D" uid="uid://c4ndjp6w5o1u4" path="res://graphics/backgrounds/upgrade_path.png" id="2_6jhwm"]
[ext_resource type="Texture2D" uid="uid://7buokyskpp6t" path="res://graphics/characters/player/Weight.png" id="4_cbtg6"]
[ext_resource type="Texture2D" uid="uid://dyh0f5i3b3s4q" path="res://graphics/characters/player/Weight+Armor.png" id="4_cgnej"]
[ext_resource type="Texture2D" uid="uid://bx5qpu84vxhbl" path="res://graphics/characters/player/Weight+Element.png" id="5_u7tcj"]
[ext_resource type="Texture2D" uid="uid://dgtpwjbm7jf0q" path="res://graphics/characters/player/Weight+Wing_Flying.png" id="6_ttgl2"]

[node name="Upgrade" type="Node2D"]
position = Vector2(604, 544)
script = ExtResource("1_x5joc")

[node name="Background" type="Sprite2D" parent="."]
position = Vector2(356, 0)
texture = ExtResource("2_6jhwm")

[node name="CurrentSprite" type="Sprite2D" parent="."]
position = Vector2(316, 288)
scale = Vector2(0.235936, 0.216664)
texture = ExtResource("4_cbtg6")

[node name="Armor" type="Button" parent="."]
offset_left = -284.0
offset_top = -480.0
offset_right = 116.0
offset_bottom = -280.0
flat = true

[node name="Sprite2D" type="Sprite2D" parent="Armor"]
position = Vector2(160, 64)
scale = Vector2(0.203658, 0.203658)
texture = ExtResource("4_cgnej")

[node name="Element" type="Button" parent="."]
offset_left = 172.0
offset_top = -480.0
offset_right = 572.0
offset_bottom = -272.0
flat = true

[node name="Sprite2D" type="Sprite2D" parent="Element"]
position = Vector2(184, 93.25)
scale = Vector2(0.191768, 0.191768)
texture = ExtResource("5_u7tcj")

[node name="Flight" type="Button" parent="."]
offset_left = 636.0
offset_top = -488.0
offset_right = 1044.0
offset_bottom = -280.0
flat = true

[node name="Sprite2D" type="Sprite2D" parent="Flight"]
position = Vector2(208, 120)
scale = Vector2(0.196951, 0.196951)
texture = ExtResource("6_ttgl2")

[connection signal="pressed" from="Armor" to="." method="_on_weight_pressed"]
[connection signal="pressed" from="Element" to="." method="_on_power_pressed"]
[connection signal="pressed" from="Flight" to="." method="_on_speed_pressed"]
